--- a/roles/mongod/tasks/shards.yml
+++ b/roles/mongod/tasks/shards.yml
@@ -8,7 +8,7 @@
   with_items: groups.mongos_servers
 
 - name: Add the shard to the mongos 
-  shell: /usr/bin/mongo localhost:{{ mongos_port }}/admin -u admin -p {{ mongo_admin_pass }} /tmp/shard_init_{{ inventory_hostname }}.js
+  shell: /usr/bin/mongo {{ inventory_hostname }}:{{ mongos_port }}/admin -u admin -p {{ mongo_admin_pass }} /tmp/shard_init_{{ inventory_hostname }}.js
   delegate_to: '{{ item }}'
   with_items: groups.mongos_servers
 
