simplify hosts and merge the recover and mongo task to one

--- a/playbook.yml
+++ b/playbook.yml
@@ -16,17 +16,8 @@
 - hosts: mongo_servers  
   sudo: yes
   roles:
-  - role: mongod
-
-# NEW RELIC service
-- hosts: newrelic_servers
-  sudo: yes
-  roles:
-  - role: newrelic
-
-# MMS MongoDB Section
-- hosts: mms_servers
-  sudo: yes
-  roles:
-  - role: mms
- 
+  - common
+  - mongod
+  - newrelic
+  - mms
+  
