--- a/roles/mongod/tasks/main.yml
+++ b/roles/mongod/tasks/main.yml
@@ -26,6 +26,17 @@
 - name: Copy the keyfile for authentication
   copy: src=secret dest={{ mongodb_datadir_prefix }}/secret owner=mongod group=mongod mode=0400
 
+- name: Stop mongodb Service
+  service: name=mongod state=stopped
+  ignore_errors: yes
+  when: recover
+
+- name:  Remove mongodb lock
+  command: rm /data/mongo-{{ inventory_hostname }}/mongod.lock
+  delegate_to: '{{ item }}'
+  with_items: groups.replication_servers
+  ignore_errors: yes
+  when: recover
 
 - name: Start the mongodb service
   command: creates=/var/lock/subsys/mongod-{{ inventory_hostname }} /etc/init.d/mongod-{{ inventory_hostname }} start
@@ -40,8 +51,9 @@
 
 - name: Initialize the replication set
   shell: /usr/bin/mongo --port "{{ mongod_port }}" /tmp/repset_init.js
+  when: not recover
 
 - name: add the admin user
   mongodb_user: database=admin name=admin password={{ mongo_admin_pass }} login_port={{ mongod_port }} state=present
-  ignore_errors: no
+  ignore_errors: {{recover}}
 
